--- a/Exercicios/Projeto 04/index.html
+++ b/Exercicios/Projeto 04/index.html
@@ -47,8 +47,7 @@
 
     <div class="content">
         <h3>Uma vida em saúde para você viver o seu melhor</h3>
-        <p>especialistas em saúde e está sempre pronta para cuidar de você da melhor forma. Para isso, oferece planos médicos e odontológicos com todos os cuidados que você, sua família ou sua empresa precisam,
-            para que sua única preocupação seja pensar na sua vida e viver o melhor dela.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam cum optio sint porro animi odit reiciendis eveniet iure. Beatae suscipit laudantium quis. Rem modi distinctio quis nesciunt eveniet natus unde.</p>
         <a href="#" class="btn"> Contate-nos <span class="fas fa-chevron-right"></span> </a>
     </div>
 
