--- a/Exercicios/Projeto 03/Projeto HTML 03/index.html
+++ b/Exercicios/Projeto 03/Projeto HTML 03/index.html
@@ -30,7 +30,7 @@
                     <input type="text">
                 </div>
                 <h1>Mora<span>ngos</span></h1>
-                <h3>Sempre enche seu  <span>coração de alegria</span></h3>
+                <h3>Sempre enche seu  <span>coração de felicidades.</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Voluptas, est. Reiciendis quam debitis neque!</p>
                 <div class="btn">
                     <button type="button" class="primary-btn">Learn More</button>
